--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.13.3",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
